[package]
name = "elmkc"
version = "0.1.2"
authors = ["Alexander Hill <ahill@breadpudding.dev>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
async-tungstenite = { version = "0.19.0", features = ["tokio-rustls-webpki-roots"] }
chrono = "0.4.23"
futures = "0.3.25"
html-escape = "0.2.13"
iced = { version = "0.7.0", features = ["tokio"] }
ketos = "0.12.0"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["time"] }
toml = "0.5.11"
